--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,13 @@ captures/
 # Intellij
 *.iml
 .idea/workspace.xml
+.idea/tasks.xml
+.idea/gradle.xml
+.idea/dictionaries
+.idea/libraries
 
 # Keystore files
 *.jks
+.idea/libraries/volley_1_0_0.xml
+app/libs/
+app/src/main/res/drawable/
