--- a/.gitignore
+++ b/.gitignore
@@ -34,14 +34,9 @@ captures/
 
 # Intellij
 *.iml
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/gradle.xml
-.idea/dictionaries
-.idea/libraries
+.idea
 
 # Keystore files
 *.jks
-.idea/libraries/volley_1_0_0.xml
-app/libs/
-app/src/main/res/drawable/
+
+gradle
