--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,11 @@
 apply plugin: 'com.android.application'
 
-//allprojects {
-//    repositories {
-//        mavenCentral()
-//    }
-//}
+allprojects {
+    repositories {
+        mavenCentral()
+        maven { url "https://jitpack.io" }
+    }
+}
 
 android {
     compileSdkVersion 23
@@ -33,5 +34,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.android.support:design:23.4.0'
+    compile 'com.github.SilenceDut:jpinyin:v1.0'
     testCompile 'junit:junit:4.12'
 }
