--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,5 +35,6 @@ dependencies {
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.android.support:design:23.4.0'
     compile 'com.github.SilenceDut:jpinyin:v1.0'
+    compile 'org.greenrobot:eventbus:3.0.0'
     testCompile 'junit:junit:4.12'
 }
