--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,12 +27,10 @@
         </activity>
         <activity
             android:name=".view.BillBoardActivity"
-            android:label="@string/title_activity_top"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:label="@string/title_activity_top" />
         <activity
             android:name=".view.LocalActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:label="@string/title_activity_local" />
     </application>
 
 </manifest>
