--- a/music/build.gradle
+++ b/music/build.gradle
@@ -51,4 +51,5 @@ dependencies {
     compile 'com.zhy:base-adapter:3.0.3'
     compile 'com.zhy:base-rvadapter:3.0.3'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.+'
 }
